--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -16,7 +16,10 @@
             <a href="#features">Features</a>
             <a href="#how">How It Works</a>
             <a href="#about">About</a>
-            <button class="btn-primary" onclick="window.location.href='/register'">Start Learning</button>
+            <div class="nav-buttons">
+                <button class="btn-primary btn-nav" onclick="window.location.href='/register'">Start Learning</button>
+                <button class="btn-login btn-nav" onclick="window.location.href='/login'">Login</button>
+            </div>
         </nav>
     </header>
 
