--- a/static/css/edit_account_style.css
+++ b/static/css/edit_account_style.css
@@ -47,13 +47,18 @@
     font-size: 22px;
     font-weight: 600;
     color: var(--neutral-dark);
-    margin-bottom: var(--space-xs);
 }
 
 .profile-info p {
     font-size: 16px;
     color: #6B7280;
     margin: 0;
+}
+
+.user-id {
+    font-size: 13px;
+    color: #9CA3AF;
+    margin-bottom: var(--space-xs);
 }
 
 /* Flash & Error Messages */
