--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -26,10 +26,6 @@
                 <i class="fas fa-book"></i>
                 <span>Courses</span>
             </a>
-            <a class="sidebar-link" href="/daily-quiz">
-                <i class="fas fa-clipboard-list"></i>
-                <span>Daily Quiz</span>
-            </a>
             <a class="sidebar-link active" href="/leaderboard">
                 <i class="fas fa-trophy"></i>
                 <span>Leaderboard</span>
@@ -47,9 +43,12 @@
             </button>
         </div>
         <div class="sidebar-footer">
-            <a class="profile-link" href="/edit-account">
+            <a class="profile-link" href="/edit-account" id="profileLink">
                 <div class="profile-circle-sidebar">{{ initials }}</div>
-                <span>Profile</span>
+                <div class="profile-info">
+                    <span id="profileName">{{ full_name }}</span>
+                    <span class="profile-id">@ab93f1x</span>
+                </div>
             </a>
             <a class="logout-link" href="/logout">
                 <i class="fas fa-sign-out-alt"></i>
