Fix HARDCODED pricing for payment

--- a/templates/package.html
+++ b/templates/package.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/global_style.css">
-    <link rel="stylesheet" href="static/css/package_style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/global_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/package_style.css') }}">
 </head>
 <body>
     <nav class="sidebar" id="sidebar">
@@ -59,7 +59,7 @@
                 <span>Logout</span>
             </a>
         </div>
-    </nav>
+        </nav>
 
     <div class="dropup-menu" id="dropupMenu">
         <a href="/edit-account">
@@ -70,7 +70,7 @@
             <i class="fas fa-sign-out-alt"></i>
             <span>Logout</span>
         </a>
-    </div>
+        </div>
 
 
     <div class="main-content">
@@ -80,8 +80,9 @@
                 <h1 class="package-title">Choose a plan for after your 7-day<br>free trial</h1>
             </div>
 
-            <div class="packages-wrapper">
-                <div class="package-card" data-plan="family" data-price="RP 154.916,67 / MO" data-annual="1.259.000,00">
+            <form action="{{ url_for('auth.package') }}" method="POST" id="packageForm">
+                <div class="packages-wrapper">
+                    <div class="package-card" data-plan="family" data-price="RP 154.916,67 / MO" data-annual="1.259.000,00">
                     <div class="package-badge">2-6 MEMBERS</div>
                     <div class="package-content">
                         <div class="package-left">
@@ -92,9 +93,9 @@
                             <div class="package-price">RP 154.916,67 / MO</div>
                         </div>
                     </div>
-                </div>
+                        </div>
 
-                <div class="package-card selected" data-plan="yearly" data-price="RP 104.916,67 / MO" data-annual="1.259.000,00">
+                    <div class="package-card selected" data-plan="yearly" data-price="RP 104.916,67 / MO" data-annual="1.259.000,00">
                     <div class="package-badge">MOST POPULAR</div>
                     <div class="package-content">
                         <div class="package-left">
@@ -107,9 +108,9 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                </div>
+                        </div>
 
-                <div class="package-card" data-plan="monthly" data-price="RP 195.000,00 / MO" data-annual="195.000,00">
+                    <div class="package-card" data-plan="monthly" data-price="RP 195.000,00 / MO" data-annual="195.000,00">
                     <div class="package-content">
                         <div class="package-left">
                             <div class="package-duration">1 month</div>
@@ -118,22 +119,25 @@
                             <div class="package-price">RP 195.000,00 / MO</div>
                         </div>
                     </div>
+                        </div>
                 </div>
-            </div>
 
-            <div class="pricing-info" id="pricingInfo">
-                7 day free trial, then Rp <span id="annualPrice">1.259.000,00</span> per year<br>
-                (Rp <span id="monthlyPrice">104.916,67</span>/month, billed annually) plus applicable taxes
-            </div>
+                <input type="hidden" name="plan" id="selectedPlan" value="yearly">
 
-            <button class="cta-button" onclick="window.location.href='/payment'">
-                <span>START MY FREE 7 DAYS</span>
-            </button>
-        </div>
+                <div class="pricing-info" id="pricingInfo">
+                    7 day free trial, then Rp <span id="annualPrice">1.259.000,00</span> per year<br>
+                    (Rp <span id="monthlyPrice">104.916,67</span>/month, billed annually) plus applicable taxes
+                </div>
+
+                <button type="submit" class="cta-button">
+                    <span>START MY FREE 7 DAYS</span>
+                </button>
+            </form>
+            </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../static/js/navbar_logic.js"></script>
-    <script src="../static/js/package_logic.js"></script>
+    <script src="{{ url_for('static', filename='js/navbar_logic.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/package_logic.js') }}"></script>
 </body>
 </html>
